<?xml version="1.0"?>
<package format="3">
  <name>eigen_utils</name>
  <version>1.0.0</version>
  <description>The eigen_utils package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
